# tlab

./: CMakeLists.txt  README.md  README_EXTRA  julian.cpp  julian.h  main.cpp  plotgraph.cpp  plotgraph.h  plotwindow.cpp  plotwindow.h  tlab.kdev4
.kdev4/: tlab.kdev4
tlab01/tlab01/: CMakeLists.txt  tlab01.kdev4
tlab02/tlab02/: CMakeLists.txt  tlab02.kdev4
tlab03/tlab03/: CMakeLists.txt  tlab03.kdev4
tlab04/tlab04/: CMakeLists.txt  tlab04.kdev4
